--- a/my-app/src/components/contact-list/contact-items.module.css
+++ b/my-app/src/components/contact-list/contact-items.module.css
@@ -1,7 +1,13 @@
 .container {
     display: flex;
     padding: 1rem;
+    width: 200px;
+    height: 150px;
+    padding: 50px;
+    border: 15px solid rgb(168, 124, 124);
+    justify-content: space-around
 }
+
 
 img {
     width: 3rem;
@@ -9,10 +15,8 @@ img {
 }
 
 .info {
-    margin-left: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    color: white;
 }
-
-
